--- a/module/Todos/view/Todos/Todos/index.phtml
+++ b/module/Todos/view/Todos/Todos/index.phtml
@@ -12,12 +12,23 @@
         </div>
         <div class="row">
           <div class='input-group date' id='dtp'>
-              <input type='text' placeholder="Due.." />
+              <input type='text' class="due" placeholder="Due.." />
               <span class="input-group-addon">
                   <span class="glyphicon glyphicon-calendar"></span>
               </span>
-            </div>
-         </div>         
+              <span>Priority:</span>
+              <select class="priority selectpicker">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+              </select> 
+        </div>         
       </form> 
  </div>          
  <div class="todos">
