--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -60,8 +60,8 @@
         <div class="container">
             <?php echo $this->content; ?>
             <hr>
-            <footer>
-                <p>&copy; by Artūras Sotničenko <?php echo $this->translate('All rights reserved.') ?></p>
+            <footer>               
+                <p class="pull-right">   &copy; by Artūras Sotničenko <?php echo $this->translate('All rights reserved.') ?></p>
             </footer>
         </div> <!-- /container -->
         <?php echo $this->inlineScript() ?>
