--- a/module/Todos/view/Todos/Todos/index.phtml
+++ b/module/Todos/view/Todos/Todos/index.phtml
@@ -10,25 +10,26 @@
           </div>
         </div>
         <div class="row">
-          <div class='input-group date' id='dtp'>
+          <div class='col-md-6 pull-left input-group date' id='dtp'>
               <input type='text' class="due" placeholder="Due.." >
               <span class="input-group-addon">
                   <span class="glyphicon glyphicon-calendar"></span>
               </span>
-            </input>
-              <span>Priority:</span>
-              <select class="priority selectpicker">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-                <option>6</option>
-                <option>7</option>
-                <option>8</option>
-                <option>9</option>
-              </select> 
-        </div>         
+            </input> 
+          </div>    
+          <span class="pull-left">Priority:
+          <select class="priority selectpicker">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+          </select>
+          </span> 
       </div>         
  </div>
 
@@ -41,9 +42,9 @@
           <span class="entypo-cancel"></span>
         </button>
        <?php if ($todo->getDeadline() !== "0000-00-00 00:00:00" ) { ?>
-         <span class="deadline label label-default pull-right"><?php echo substr($todo->getDeadline(), 0, -3); ?></span>
+         <span  contenteditable="true" id="pickers" class="deadline label label-default pull-right"><?php echo substr($todo->getDeadline(), 0, -3); ?></span>
        <?php } ?> 
-      
+        
        <span class="label label-default priority priority-<?php echo $todo->getPriority()?> pull-right">Priority: <?php echo $todo->getPriority()?></span>       
         <button >
           <span class="entypo-check"></span>
@@ -52,6 +53,9 @@
     </div>
 
     <?php endforeach; ?>
+ 
+            
+     
 </div>
 <div class="clear-both"></div> 
 </div>
