--- a/module/Todos/view/Todos/Todos/index.phtml
+++ b/module/Todos/view/Todos/Todos/index.phtml
@@ -32,8 +32,22 @@
           </span> 
       </div>         
  </div>
+ <div role="tabpanel">
 
- <div class="todos">
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#todos" aria-controls="todos" role="tab" data-toggle="tab">All todos</a></li>
+    <li role="presentation"><a href="#Todays" aria-controls="profile" role="tab" data-toggle="tab">Todays todo</a></li>
+    <li role="presentation"><a href="#Priority" aria-controls="messages" role="tab" data-toggle="tab">Priority rank</a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  
+
+</div>
+<div class="tab-content">
+  <div role="tabpanel" class="tab-pane fade in active" id="todos">
+   <div class="todos">
     <?php foreach($todos as $todo):?>
     <div class="row todoItem <?php if ($todo->getCompleted() == 1) {  echo 'done';  } ?>">
        <span  id="todo-<?php echo $todo->getId() ?>" class="todo" contenteditable="true"><?php echo $todo->getTodo()?></span>
@@ -43,19 +57,75 @@
         </button>
        <?php if ($todo->getDeadline() !== "0000-00-00 00:00:00" ) { ?>
          <span contenteditable="true" id="deadline-<?php echo $todo->getId() ?>" class="deadline  label label-default pull-right"><?php echo substr($todo->getDeadline(), 0, -3); ?></span>
+         <span class="pull-right label label-warning deadline-error">wrong format! (DD/MM/YYYY HH:mm)</span>
+       <?php } else { ?>
+          <span contenteditable="true" id="deadline-<?php echo $todo->getId() ?>" class="deadline  label label-default pull-right"><?php echo 'Deadline not set' ?></span>
+          <span class="pull-right label label-warning deadline-error">wrong format! (DD/MM/YYYY HH:mm)</span>
        <?php } ?> 
         
        <span class="label label-default priority priority-<?php echo $todo->getPriority()?> pull-right">Priority: <?php echo $todo->getPriority()?></span>       
         <button class="check-todo">
           <span class="entypo-check"></span>
         </button>
-        </div>
+      </div>
+    </div><?php endforeach; ?>    
+  </div>
+</div>
+<div role="tabpanel" class="fade tab-pane" id="Todays">
+<?php foreach($todos as $todo): ?>
+ <?php $todoDate  = new DateTime($todo->getDeadline());
+       $today     = new DateTime();
+ if ($todoDate->diff($today)->days === 0):  ?>
+   <div class="row todoItem <?php if ($todo->getCompleted() == 1) {  echo 'done';  } ?>">
+       <span  id="todo-<?php echo $todo->getId() ?>" class="todo" contenteditable="true"><?php echo $todo->getTodo()?></span>
+        <div class="row">
+        <button  id="remove-<?php echo $todo->getId(); ?>" class="delete-todo">
+          <span class="entypo-cancel"></span>
+        </button>
+       <?php if ($todo->getDeadline() !== "0000-00-00 00:00:00" ) { ?>
+         <span contenteditable="true" id="deadline-<?php echo $todo->getId() ?>" class="deadline  label label-default pull-right"><?php echo substr($todo->getDeadline(), 0, -3); ?></span>
+         <span class="pull-right label label-warning deadline-error">wrong format! (DD/MM/YYYY HH:mm)</span>
+       <?php } else { ?>
+          <span contenteditable="true" id="deadline-<?php echo $todo->getId() ?>" class="deadline  label label-default pull-right"><?php echo 'Deadline not set' ?></span>
+          <span class="pull-right label label-warning deadline-error">wrong format! (DD/MM/YYYY HH:mm)</span>
+       <?php } ?> 
+        
+       <span class="label label-default priority priority-<?php echo $todo->getPriority()?> pull-right">Priority: <?php echo $todo->getPriority()?></span>       
+        <button class="check-todo">
+          <span class="entypo-check"></span>
+        </button>
+      </div>
     </div>
+   <?php endif; ?> 
+  <?php endforeach; ?>
+</div>
 
-    <?php endforeach; ?>
- 
-            
-     
+<div role="tabpanel" class="fade tab-pane" id="Priority">
+<?php foreach($PriorityTodos as $todo): ?>
+   <div class="row todoItem <?php if ($todo->getCompleted() == 1) {  echo 'done';  } ?>">
+       <span  id="todo-<?php echo $todo->getId() ?>" class="todo" contenteditable="true"><?php echo $todo->getTodo()?></span>
+        <div class="row">
+        <button  id="remove-<?php echo $todo->getId(); ?>" class="delete-todo">
+          <span class="entypo-cancel"></span>
+        </button>
+       <?php if ($todo->getDeadline() !== "0000-00-00 00:00:00" ) { ?>
+         <span contenteditable="true" id="deadline-<?php echo $todo->getId() ?>" class="deadline  label label-default pull-right"><?php echo substr($todo->getDeadline(), 0, -3); ?></span>
+         <span class="pull-right label label-warning deadline-error">wrong format! (DD/MM/YYYY HH:mm)</span>
+       <?php } else { ?>
+          <span contenteditable="true" id="deadline-<?php echo $todo->getId() ?>" class="deadline  label label-default pull-right"><?php echo 'Deadline not set' ?></span>
+          <span class="pull-right label label-warning deadline-error">wrong format! (DD/MM/YYYY HH:mm)</span>
+       <?php } ?> 
+        
+       <span class="label label-default priority priority-<?php echo $todo->getPriority()?> pull-right">Priority: <?php echo $todo->getPriority()?></span>       
+        <button class="check-todo">
+          <span class="entypo-check"></span>
+        </button>
+      </div>
+    </div>
+  
+  <?php endforeach; ?>
+</div>
+
 </div>
 <div class="clear-both"></div> 
 </div>
