--- a/module/Application/view/zfc-user/user/index.phtml
+++ b/module/Application/view/zfc-user/user/index.phtml
@@ -1,7 +1,7 @@
-<div class="container"><div class="row">
-<div ><?php echo $this->gravatar($this->zfcUserIdentity()->getEmail()) ?></div>
-<h3><?php echo $this->translate('Hello'); ?>, <?php echo $this->zfcUserDisplayName() ?>!</h3>
-<a href="<?php echo $this->url('zfcuser/logout') ?>">[<?php echo $this->translate('Sign Out'); ?>]</a>
-<div style="clear:both;"></div>
-</div>
+<div class="row">
+	<div ><?php echo $this->gravatar($this->zfcUserIdentity()->getEmail()) ?></div>
+		<h3><?php echo $this->translate('Hello'); ?>, <?php echo $this->zfcUserDisplayName() ?>!</h3>
+		<a href="<?php echo $this->url('zfcuser/logout') ?>">[<?php echo $this->translate('Sign Out'); ?>]</a>
+	<div style="clear:both;"></div>
+
 </div>
