--- a/module/Application/view/zfc-user/user/index.phtml
+++ b/module/Application/view/zfc-user/user/index.phtml
@@ -5,6 +5,5 @@
 	<div style="clear:both;"></div>
 
 </div>
- <?php  /*foreach ($users as $user ) {
- 	echo var_dump($this->getUser());
-*/
+<h2>Registered Users</h2>
+<div class="users-panel"></div>
