added some fixes on layout, path names etc

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <?php echo $this->headTitle('ZF2 '. $this->translate('AviaSG todo testas'))->setSeparator(' - ')->setAutoEscape(false) ?>
+        <?php echo $this->headTitle('ZF2 '. $this->translate('ToDo list'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
         <?php echo $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
