--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -14,6 +14,6 @@
   </div>
 <?php else: ?>
     <!-- display the 'display name' of the user -->
-    <?php echo "not authorized"; ?>
+    <?php echo "<h1>Nothing to see here</h1>"; ?>
 <?php endif?>
 <?php endif?>
