--- a/module/Todos/view/todos/partials/todo-partial.phtml
+++ b/module/Todos/view/todos/partials/todo-partial.phtml
@@ -2,7 +2,7 @@
        <span  id="todo-<?php echo $todo->getId() ?>" class="todo" contenteditable="true"><?php echo $todo->getTodo()?></span>
         <div class="row">
         <button  id="remove-<?php echo $todo->getId(); ?>" class="delete-todo">
-          <span class="entypo-cancel"></span>
+          <span>✘</span>
         </button>
        <?php if ($todo->getDeadline() !== "0000-00-00 00:00:00" ) { ?>
          <span contenteditable="true" id="deadline-<?php echo $todo->getId() ?>" class="deadline  label label-default pull-right"><?php echo substr($todo->getDeadline(), 0, -3); ?></span>
@@ -14,7 +14,8 @@
         
        <span class="label label-default priority priority-<?php echo $todo->getPriority()?> pull-right">Priority: <?php echo $todo->getPriority()?></span>       
         <button class="check-todo">
-          <span class="entypo-check"></span>
+            <span>Done?</span>
+            <!--<span class=""></span>   -->
         </button>
       </div>
 </div>
