some layout fixes

--- a/module/Todos/view/todos/todos/index.phtml
+++ b/module/Todos/view/todos/todos/index.phtml
@@ -29,7 +29,7 @@
           </select>
           </span> 
           <span class="input-group-addon">
-            <button type="submit" class="glyphicon glyphicon-plus input-group-btn create-todo"></button>
+            <button type="submit" class="glyphicon glyphicon-plus input-group-btn create-todo"><span class="add"> Add!</span></button>
           </span>
       </div>         
  </div>
