--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,15 +44,29 @@ li {
 .row {
   margin: 0;
 }
+.add {
+    font-family: 'Bad Script', helvetica;
+    font-size: 18px;
+    color: #95a5a6;
+}
+.load-more, body {
+  font-family: 'Bad Script', cursive;
+}
+.todoItem {
+  font-family: helvetica;
+}
 .create-todo {
+  /*font-family: '"Helvetica Neue",Helvetica,Arial,sans-serif'*/
   width: 100%;
   height: 100%;
   left: -4px;
 }
-.input-group-addon {
+.input-group-addon, span.pull-left, .selectpicker {
+  color:  #95a5a6;
   background: none;
   border:none;
 }
+
 .content {  
   margin: 0 auto;
   background: #ecf0f1;
@@ -81,8 +95,8 @@ li {
 .done {
   text-decoration:line-through;
 }
-check-todo span:after {
-  content: '☐';
+.check-todo span:after {
+  content: '☐' ;
 }
 .done .check-todo span:after {
  content: '☑ '; !important
@@ -796,10 +810,10 @@ button {
 }
 .bootstrap-select.btn-group .btn .filter-option {
   color: black;
-
+  font-size: 25px;
   padding-right: 14px;
   margin-left: -10px;
-  margin-top: 2px; 
+  margin-top: -10px; 
   display: inline-block;
   overflow: hidden;
   width: 100%;
