--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,7 +320,7 @@ button {
   display: inline-block;
   width: 200px;
   margin: 0 40px;
-  font-size: .8rem;
+  font-size: 1rem;
   color: rgba(255,255,255,.4);
   /*background-color: yellow;*/
 }
